@@ -3,6 +3,7 @@ $Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU X.Y.Z
+	- [buf] u_buf_shrink added
 	- [net] fix u_connect_ex timeout re-computation on EINTR to take care
 	  of Linux non-POSIX compliant behaviour
 	- [net] disable u_net_nagle_off() on Minix
